Bug 471383 - Progress bar never disappear when two monitor is connected and the haruna is full screen playing in the above screen
Summary: Progress bar never disappear when two monitor is connected and the haruna is ...
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 0.10.3
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-06-23 12:47 UTC by LXYan2333
Modified: 2023-06-28 20:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
the monitor layout. haruna is full-screen playing in the above screen. (20.43 KB, image/png)
2023-06-23 12:47 UTC, LXYan2333
Details

Note You need to log in before you can comment on or make changes to this bug.
Description LXYan2333 2023-06-23 12:47:53 UTC
Created attachment 159857 [details]
the monitor layout. haruna is full-screen playing in the above screen.

SUMMARY
When two monitor is connected and configured one screen above another, and fullscreen playing video in the above screen, if I move cursor to the monitor below, the video progree bar never disappear.


STEPS TO REPRODUCE
1. connect two monitor to a computer
2. configure one monitor above another, like in the attached file.
3. full screen play a video in the above monitor
4. move cursor to the monitor below

OBSERVED RESULT
notice the progress bar never disappear

EXPECTED RESULT
after I move cursor to another screen, the progress bar disappear several seconds later.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 6.1.0-9
(available in About System)
KDE Plasma Version: 5.27.5
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
this bug only happens with up-down monitor layout. It won't happen in left-right monitor layout.
Comment 1 george fb 2023-06-28 20:19:53 UTC
Git commit 46725282c61d83004f2bdd6ee902c105a411d5f3 by George Florea Bănuș.
Committed on 28/06/2023 at 20:19.
Pushed by georgefb into branch 'master'.

Footer: hide when mouse leaves application while in fullscreen

M  +1    -0    src/application.cpp
M  +5    -0    src/application.h
M  +7    -1    src/qml/main.qml

https://invent.kde.org/multimedia/haruna/-/commit/46725282c61d83004f2bdd6ee902c105a411d5f3