Footer: hide when mouse leaves application while in fullscreen

BUG: 471383